# rv1108_hover2

./: CMakeLists.txt  README.md  mkfirmware.sh
app/wlan_service/: .gitignore  CMakeLists.txt  main.cc
app/wlan_service/src/: console.cc  console.h  wlan_service.cc  wlan_service.h
app/wlan_service/test/: CMakeLists.txt  wlan_service_test.cc
common/root/etc/: fstab  hostname  inittab  p2p_supplicant.config  profile  sysctl.conf  vgrabbj.conf  wpa_supplicant.config  wpa_supplicant_p2p.config
common/root/etc/boa/: boa.conf
common/root/etc/cam_iq/: cam_default.xml  imx323_LA6114PA.xml  imx323_YM6011P.xml  ov2710_LA6110PA.xml  ov2710_YM6011P.xml  ov4689_LA6111PA.xml
common/root/etc/hostapd/: hostapd.conf
common/root/etc/init.d/: hostapd  rcS  run_adbd.sh
common/root/sh/: runwifiap.sh
common/system/include/: cvr_ffmpeg_shared.h
common/system/lib/: libfreetype.so.6.3.20  libgcc_s.so.1  libstdc++.so.6.0.19  libubacktrace.so.1
config/: build_config.sh  envsetup.sh  package_config.sh
docs/: SDKUpdateExplain.txt
prebuilts/toolschain/usr/arm-rkcvr-linux-uclibcgnueabihf/lib/: libatomic.so.1.0.0  libitm.la  libitm.so.1.0.0  libstdc++.la  libstdc++.so.6.0.19-gdb.py  libsupc++.la
prebuilts/toolschain/usr/include/: gmp.h
prebuilts/toolschain/usr/lib/: libfakeroot.la  libgmp.la  libgmp.so.10.3.0  libmpc.la  libmpc.so.3.0.0  libmpfr.la  libmpfr.so.4.1.4
tools/CVRTools_Release_v1.00/: config.cfg  config.ini  config_cvr.cfg  cvr_image.sh  readme.txt
tools/Linux_Upgrade_Tool_v1.24/: config.ini  cvr_upgrade.sh  parameter-rk322x-trust
(+55 files in other folders)
